--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url('/src/assets/styles/recommendReset.css');
 /* ===================================
    메인 슬라이드 스타일
    =================================== */
