--- a/src/component/logo/styles.css
+++ b/src/component/logo/styles.css
@@ -1,4 +1,3 @@
-@import url(/src/assets/styles/recommendReset.css);
 a {
   display: block;
 }
@@ -13,35 +12,101 @@ a {
    장바구니 & 로그인 아이콘
    ======================================== */
 .shop {
-  width: 32px;
-  height: 32px;
+  width: 100%;
+  height: 100%;
   background: url('/src/assets/images/icon-shopping-cart.png') no-repeat center
     center / contain;
   display: block;
 }
 
 .shop-gr {
-  width: 32px;
-  height: 32px;
+  width: 100%;
+  height: 100%;
   background: url('/src/assets/images/icon-shopping-cart-2.png') no-repeat
     center center / contain;
   display: block;
 }
 
 .user {
-  width: 32px;
-  height: 32px;
+  width: 100%;
+  height: 100%;
   background: url('/src/assets/images/icon-user.png') no-repeat center center /
     contain;
   display: block;
 }
 
 .user-gr {
-  width: 32px;
-  height: 32px;
+  width: 100%;
+  height: 100%;
   background: url('/src/assets/images/icon-user-2.png') no-repeat center
     center / contain;
   display: block;
+}
+
+/* ========================================
+   장바구니 아이콘 (logo-cart)
+   ======================================== */
+.cart-icon {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: relative;
+}
+
+.cart-icon__default,
+.cart-icon__active {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  transition: opacity 0.2s;
+}
+
+.cart-icon__default {
+  background: url('/src/assets/images/icon-shopping-cart.png') no-repeat center
+    center / contain;
+  opacity: 1;
+}
+
+.cart-icon__active {
+  background: url('/src/assets/images/icon-shopping-cart-2.png') no-repeat
+    center center / contain;
+  opacity: 0;
+}
+
+/* ========================================
+   계정 아이콘 (logo-account)
+   ======================================== */
+.account-icon {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: relative;
+}
+
+.account-icon__default,
+.account-icon__active {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  transition: opacity 0.2s;
+}
+
+.account-icon__default {
+  background: url('/src/assets/images/icon-user.png') no-repeat center center /
+    contain;
+  opacity: 1;
+}
+
+.account-icon__active {
+  background: url('/src/assets/images/icon-user-2.png') no-repeat center
+    center / contain;
+  opacity: 0;
 }
 
 /* ========================================
