--- a/src/adminpages/makeProduct/style.css
+++ b/src/adminpages/makeProduct/style.css
@@ -165,6 +165,17 @@ fieldset {
   color: var(--background-color);
 }
 
+.field-error {
+  font-size: 1.2rem;
+  color: var(--input-error-color);
+  margin: 0;
+  min-height: 1rem;
+}
+
+#nameError {
+  margin-top: -6px;
+}
+
 /* 버튼 영역 */
 .button-group {
   display: flex;
