fix: 필수 입력 항목에 대한 유효성 검사 및 스타일 추가

--- a/src/pages/Payment/style.css
+++ b/src/pages/Payment/style.css
@@ -128,6 +128,12 @@ payment-header {
   flex-shrink: 0;
 }
 
+.required-text {
+  font-size: 1.2rem;
+  color: #e60023;
+  margin-left: 6px;
+}
+
 .info-input {
   width: 334px;
   height: 40px;
