--- a/src/pages/login/style.css
+++ b/src/pages/login/style.css
@@ -30,10 +30,74 @@ body {
   display: block;
 }
 
+/* ===== 로그인 유형 선택 탭 ===== */
+.login-tabs {
+  width: 560px;
+  display: flex;
+  margin-bottom: 0;
+}
+
+.login-tab {
+  flex: 1;
+  height: auto;
+}
+
+.login-tab .tab-button {
+  width: 100%;
+  height: 60px;
+  min-width: unset;
+  background: #F2F2F2;
+  border: 1px solid #C4C4C4;
+  border-radius: 10px 10px 0 0;
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+}
+
+.login-tab:first-child .tab-button {
+  border-top-right-radius: 0;
+  border-right: none;
+}
+
+.login-tab:last-child .tab-button {
+  border-top-left-radius: 0;
+  border-left: none;
+}
+
+.login-tab[active] .tab-button,
+.login-tab .tab-button.tab-button--active {
+  background: white;
+  border-bottom: 1px solid white;
+  z-index: 1;
+}
+
+.login-tab .tab-button__text {
+  position: static;
+  transform: none;
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 2.2rem;
+  color: #000000;
+}
+
+.login-tab[active] .tab-button__text,
+.login-tab .tab-button--active .tab-button__text {
+  color: #21BF48;
+  font-weight: 700;
+}
+
+.login-tab .tab-button__indicator {
+  display: none;
+}
+
 .login-box {
   width: 560px;
   border: 1px solid #cfcfcf;
-  border-radius: 10px;
+  border-top: none;
+  border-radius: 0 0 10px 10px;
   background: #fff;
 
   padding: 34px 58px 38px;
