fixed:마이페이지 마크다운 위치 수정

--- a/src/component/header/search.css
+++ b/src/component/header/search.css
@@ -101,7 +101,8 @@
   gap: 26px; /* 장바구니와 마이페이지 사이 26px */
 }
 
-.nav-item {
+.nav-item[data-nav="mypage"] {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
