--- a/src/component/modal/check.css
+++ b/src/component/modal/check.css
@@ -22,7 +22,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  padding: 32px 30px 30px;
+  justify-content: center;
+  padding: 40px 30px 40px;
   box-sizing: border-box;
 }
 
@@ -58,7 +59,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 16px 0 0;
+  padding: 24px 0 0;
   text-align: center;
 }
 
@@ -80,7 +81,7 @@
   justify-content: center;
   gap: 10px;
   height: 40px;
-  margin-top: 24px;
+  margin-top: 28px;
 }
 
 .modal-cancel-btn,
