fixed: 헤더 장바구니 마이페이지 아이콘 정렬문제 해결

--- a/src/component/header/search.css
+++ b/src/component/header/search.css
@@ -118,7 +118,9 @@
 .nav-item logo-account {
   width: 32px;
   height: 32px;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* hover 시 아이콘 전환 */
