--- a/src/component/header/search.css
+++ b/src/component/header/search.css
@@ -245,3 +245,14 @@
 .nav-item--seller-center .ms-icon-button {
   margin: 0;
 }
+
+.search-container:focus-within {
+  border-color: #21bf48; 
+  box-shadow: none;     
+  outline: none;        
+}
+
+.search-button:focus {
+  outline: none;
+}
+
